refactor: department module as been removed completly
